--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "author": "",
     "license": "ISC",
+    "engines": {
+        "node": "9.2.0"
+    },
     "dependencies": {
         "axios": "^0.17.1",
         "bcryptjs": "^2.4.3",
