--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "react": "^16.2.0",
         "react-bootstrap": "^0.32.0",
         "react-dom": "^16.2.0",
-        "react-router-dom": "^4.2.2",
+        "react-router-dom": "^4.2.2"
+    },
+    "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
@@ -36,6 +38,5 @@
         "babel-register": "^6.26.0",
         "react-test-renderer": "^16.2.0",
         "webpack": "^3.10.0"
-    },
-    "devDependencies": {}
+    }
 }
